@@ -1,23 +1,0 @@
-/* XPM */
-static char * play_back_xpm[] = {
-"13 15 5 1",
-" 	c None",
-".	c #949594",
-"+	c #000000",
-"@	c #8E8E8E",
-"#	c #FFFFFF",
-"......       ",
-".+++++.      ",
-".++++++.     ",
-".+++++++.    ",
-".++++++++.   ",
-".+++++++++.  ",
-".++++++++++. ",
-".++++++++++@#",
-".+++++++++@# ",
-".++++++++@#  ",
-".+++++++@#   ",
-".++++++@#    ",
-".+++++@#     ",
-".+@@@@#      ",
-".#####       "};
